--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </tr>
     <tr>
       <td>2022-present</td>
-      <td>Network Engineer at Earth tech</td>
+      <td>Network Engineer at Earth</td>
     </tr>
   </table>
   <hr>
